samples/_failures_safe/1761526436_74504d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85f4cc70.c: In function ‘main’:
./samples/SAFE/__tmp_85f4cc70.c:152:16: error: missing terminating " character
  152 |         printf("%-12s %-16s %-6d %-6
      |                ^~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_85f4cc70.c:152:9: error: expected expression at end of input
  152 |         printf("%-12s %-16s %-6d %-6
      |         ^~~~~~
./samples/SAFE/__tmp_85f4cc70.c:152:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85f4cc70.c:152:9: error: expected declaration or statement at end of input
